# MLD_Player

./: .gitignore  README.md  build.gradle  build.xml  keystore.properties.example  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  fluidsynth_renderer.cpp
app/src/main/res/drawable/: bg_bottom_nav.xml  (+9 more)
core/: build.gradle
docs/: build.md  mld_canonical_spec.md  mld_mapping_spec.md  tree.md
src/app/: PlaybackController.java  PlayerCanvas.java  PlayerSkinAssets.java  PlayerTheme.java
src/bridge/midi/: MidiBridgeExporter.java
src/bridge/mld/: GeneratedMldSong.java  ImportedMidiSong.java  MidiSequenceImporter.java  MidiToMldConverter.java  MldContainerWriter.java
src/container/: InfoChunk.java  MldFile.java  MldParser.java  TrackChunk.java
src/event/: MachineDependentEvent.java  NoteEvent.java  ResourceEvent.java  SystemEvent.java  TrackDecodeResult.java  TrackDecoder.java  TrackEvent.java
src/io/: FileConnectionLoader.java
src/main/: Cli.java  MainMidlet.java  PlayerLauncher.java  SwingPlayer.java
src/playback/: J2meMidiPlayer.java  JavaMidiPlayer.java  MidiBytesBuilder.java  PlaybackMonitor.java
src/timeline/: PlaybackTimeline.java  TimelineCompiler.java
src/util/: ByteArrayUtil.java  Cp932Decoder.java  JsonSink.java  SortUtil.java
src_test/: README.md
src_test/main/: ExportAudit.java
src_test/playback/: ImaAdpcm4Decoder.java  JavaPcmPlayer.java  PcmWaveWriter.java  ResourceAudioMixBuilder.java
tools/: MidiHookProbe.cs  asmprobe.csx  ildump.csx  mld_dump.py  native_probe.ps1
(+41 files in other folders)
